--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 -->
 
 <html lang="en">
-  <head><title>Calculator ♾ WB(The Odin Project)</title>
+  <head><title>Calculator 🔢 WB</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Orbitron">
   </head>
